# xy

./: .gitignore  CMakeLists.txt  README.md  build.bat  xy.cpp  xy.ini
.github/workflows/: cmake-multi-platform.yml
test/: test.bat
